<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/readingbg"
    android:orientation="vertical"
    tools:context=".PreparingReadingActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/clickbuttonbelow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/passos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passos"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/passo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passo1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/passo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passo2"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/passo3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/passo3"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/startReading"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="#FF0000"
        android:text="@string/start_reading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="startReading"
        />

    <TextView
        android:id="@+id/clickbuttonbelow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/clickbuttonbelow"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/startReading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>