<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aboutbg"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/aboutinfos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aboutinfos" />

    <TextView
        android:id="@+id/devname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devname"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutinfos" />

    <TextView
        android:id="@+id/utfpr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/utfpr"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devname" />

    <TextView
        android:id="@+id/tcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tcc"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/utfpr" />

    <TextView
        android:id="@+id/engcomp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tcc" />
</androidx.constraintlayout.widget.ConstraintLayout>